--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.19.2",
     "formik": "^2.1.5",
     "install": "^0.13.0",
+    "node": "^18.17.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -27,7 +28,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "typescript": "4.1.2",
+    "typescript": "4.9.5",
     "uuid": "^8.0.0"
   },
   "scripts": {
