--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "storybook": "SET NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 9009 -s public",
+    "storybook": "SET NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 9009 -s public --no-dll",
     "build-storybook": "build-storybook -s public",
     "jest:integration": "jest -c integration/jest.config.js",
     "test:integration": "start-server-and-test storybook http-get://localhost:9009 jest:integration"
@@ -67,6 +67,7 @@
     "jest-puppeteer": "^4.4.0",
     "prettier": "3.0.0",
     "puppeteer": "^5.1.0",
-    "start-server-and-test": "^1.11.2"
+    "start-server-and-test": "^1.11.2",
+    "storybook-react-router": "^1.0.8"
   }
 }
